tests/unit-fail/j013a.c
struct {
      int x;
      int y;
} s;

int main(void) {
      int x;
      s.x = x;

      return 0;
}
